Fix step timing outside range [0,1]

With inputs outside the range [0,1], the steps timing function does not
match the behaviour described in
https://www.w3.org/TR/css-timing-1/#step-timing-functions,
as demonstrated by the failing
LayoutTests/external/wpt/css-timing-1/step-timing-functions-output.html.
This patch changes the step timing implementation to match the specced
algorithm.

BUG=712918
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2830553002
Cr-Commit-Position: refs/heads/master@{#465835}

Former-commit-id: dc03a50c0abe027a408aae5c72f08b10d7fbe584